# Deviare-InProc

./: CMakeLists.txt
DeviareLiteInterop/: DeviareLiteInterop_2017.csproj
NktHookLib/: CMakeLists.txt
NktHookLib/Src/Asm/: CMakeLists.txt
NktHookLib/Src/libudis86/: CMakeLists.txt
Obj2Inc/: CMakeLists.txt  Obj2Inc.cpp
Samples/: CMakeLists.txt
Samples/C/: CMakeLists.txt
Samples/C/ApiHook/: CMakeLists.txt  HookTest_2017.vcxproj
Samples/C/InjectDll/: CMakeLists.txt
Samples/C/TestDll/: CMakeLists.txt
Samples/CSharp/ApiAndMethodsHook/: Test_2017.csproj
Samples/CSharp/CreateProcessWithDllTest/: CreateProcessWithDllTest_2017.csproj
